fix spelling typo

--- a/clients/html/src/app/result/result.component.html
+++ b/clients/html/src/app/result/result.component.html
@@ -127,7 +127,7 @@
                 <thead>
                   <tr>
                     <th>Plan Name</th>
-                    <th>Plan HOIS</th>
+                    <th>Plan HIOS</th>
                     <th>Plan Member Premium</th>
                   </tr>
                 </thead>
