--- a/app/views/admin/enterprise/show.html.erb
+++ b/app/views/admin/enterprise/show.html.erb
@@ -106,11 +106,11 @@
 <br/>
 <div>
   <h2>Benefit Year</h2>
-  <%= form_for(@enterprise, url: admin_enterprise_benefit_year_update_path(enterprise_id: @enterprise), :html => {:method => :post}) do |form| %>
+  <%= form_for(@enterprise, url: admin_enterprise_benefit_year_create_path(enterprise_id: @enterprise.id), :html => {:method => :post}) do |form| %>
 
     <div class="form-group col-md-4 mt-4">
       <h5><p>Benefit Year</p></h5>
-      <%= select_dropdown('benefit_year', form.object.benefit_years.map(&:calendar_year), true) %>
+      <%= select_dropdown('benefit_year', (Date.today.year..Date.today.year+1).to_a) %>
     </div>
 
     <div class="form-group col-md-4">
@@ -118,7 +118,7 @@
       <%= input_number_control({value: form.object.benefit_years.first.expected_contribution}, form) %>
       <p class="mt-3" > <%= form.object.benefit_years.first.description %> </p>
     </div>
-    <%= submit_tag 'Update Benefit Year', class: "btn btn-primary" %>
+    <%= submit_tag 'Add Benefit Year', class: "btn btn-primary" %>
   <% end %>
 </div>
 <br/>
@@ -126,16 +126,34 @@
   <h2>Benefit Years</h2>
   <div class="table-responsive">
     <table class="table">
-      <%= thead(["Benefit Year", "Expected Contribution Factor", "Created at" ], options={class_name: "thead-light"})%>
+      <%= thead(["Benefit Year", "Expected Contribution Factor", "Created at", "Is Active", "Action" ], options={class_name: "thead-light"})%>
       <tbody>
-      <% @enterprise.benefit_years.each do |benefit_year| %>
-        <%= trow([benefit_year.calendar_year, benefit_year.expected_contribution, benefit_year.created_at])%>
+      <% @enterprise.benefit_years.order(calendar_year: :desc).each do |benefit_year| %>
+        <tr>
+          <td><%= benefit_year.calendar_year %></td>
+          <td><%= benefit_year.expected_contribution %></td>
+          <td><%= benefit_year.created_at %></td>
+          <td><%= benefit_year.is_active ? 'Yes' : 'No' %></td>
+          <% if !benefit_year.is_active %>
+            <td><%= button_to("Make Active", admin_enterprise_make_benefit_year_active_path(enterprise_id: @enterprise, benefit_year: benefit_year), class: "btn btn-primary", data: { confirm: 'Are you sure, This will make other Benefit Years inactive if present?'}) %></td>
+          <% else %>
+            <td></td>
+          <% end %>
+        </tr>
       <% end %>
       </tbody>
     </table>
   </div>
-</div>
-
+  <h2>Plan Premium Validations</h2>
+  <%= form_for(@enterprise, url: admin_enterprise_show_plan_premium_on_client_result_path(enterprise_id: @enterprise.id), :html => {:method => :post}) do |form| %>
+    <div class="form-group form-check">
+      <%= form.check_box :show_plan_calculation_in_client_ui, class: "form-check-input" %>
+      <label class="form-check-label" for="exampleCheck1">Display plan info on client results screen</label>
+      <br />
+      <br />
+      <%= submit_tag 'Update Client UI', class: "btn btn-primary" %>
+    </div>
+  <% end %>
 <div class="card border-0 pt-4">
   <div class="align-self-center">
     <%= link_to "Purge HRA Tool Database", admin_enterprise_purge_hra_path(enterprise_id: @enterprise), class: 'btn-lg btn-danger' %>
