--- a/clients/html/src/app/result/result.component.html
+++ b/clients/html/src/app/result/result.component.html
@@ -122,7 +122,7 @@
               </table>
             </div>
             <br />
-            <div *ngIf="result">
+            <div *ngIf="showPlanData">
               <table class="table">
                 <thead>
                   <tr>
